updated rnn code

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "0.8"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +84,50 @@
     "\n",
     "# indicates the location to split the data along\n",
     "# since dev/test are the same size\n",
-    "test_split_position = 1.0 - (1.0 - train_pct) / 2\n",
-    "test_split_position"
+    "test_split_position = 1.0 - (1.0 - train_pct) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IE split\n",
+    "import collections\n",
+    "\n",
+    "train_ie, dev_ie, test_ie = np.split(df_ie.sample(frac=1, random_state = 224), [int(train_pct*len(df_ie)), int(test_split_position*len(df_ie))])\n",
+    "train_ns, dev_ns, test_ns = np.split(df_ns.sample(frac=1, random_state = 224), [int(train_pct*len(df_ns)), int(test_split_position*len(df_ns))])\n",
+    "train_ft, dev_ft, test_ft = np.split(df_ft.sample(frac=1, random_state = 224), [int(train_pct*len(df_ft)), int(test_split_position*len(df_ft))])\n",
+    "train_pj, dev_pj, test_pj = np.split(df_pj.sample(frac=1, random_state = 224), [int(train_pct*len(df_pj)), int(test_split_position*len(df_pj))])\n",
+    "\n",
+    "def get5050sample(train_data, train_data_col):\n",
+    "    counts_train = collections.Counter(train_data_col)\n",
+    "#     print(counts_train)\n",
+    "#     print(\"least freq\", counts_train.most_common(2)[1][0])\n",
+    "    most_freq = counts_train.most_common(1)[0][0]\n",
+    "    least_freq = counts_train.most_common(2)[1][0]\n",
+    "#     print(most_freq, least_freq)\n",
+    "    sample_count = counts_train[least_freq]\n",
+    "#     print(sample_count)\n",
+    "    new_sample = train_data[train_data_col == most_freq].sample(n = sample_count)\n",
+    "#     print(len(new_sample))\n",
+    "#     print(\"hi\")\n",
+    "    return train_data[train_data_col == least_freq].append(new_sample).sample(frac=1)\n",
+    "\n",
+    "train_ie = get5050sample(train_ie, train_ie['IE'])\n",
+    "train_ns = get5050sample(train_ns, train_ns['NS'])\n",
+    "train_ft = get5050sample(train_ft, train_ft['FT'])\n",
+    "train_pj = get5050sample(train_pj, train_pj['PJ'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
    ]
   },
   {
@@ -94,42 +136,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ie, dev_ie, test_ie = np.split(df_ie.sample(frac=1, random_state = 224), [int(train_pct*len(df_ie)), int(test_split_position*len(df_ie))])\n",
-    "train_ns, dev_ns, test_ns = np.split(df_ns.sample(frac=1, random_state = 224), [int(train_pct*len(df_ns)), int(test_split_position*len(df_ns))])\n",
-    "train_ft, dev_ft, test_ft = np.split(df_ft.sample(frac=1, random_state = 224), [int(train_pct*len(df_ft)), int(test_split_position*len(df_ft))])\n",
-    "train_pj, dev_pj, test_pj = np.split(df_pj.sample(frac=1, random_state = 224), [int(train_pct*len(df_pj)), int(test_split_position*len(df_pj))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn.feature_extraction.text import CountVectorizer as cv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,35 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "vocab_dict = build_vocab_dict()\n",
-    "vocab_size = len(vocab_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "95312\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(vocab_size)\n",
+    "vocab_size = len(vocab_dict)\n",
     "vocab_dict['UNK'] = vocab_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,8 +182,6 @@
     "    wordVectors = np.zeros((len(tokens), dimensions))\n",
     "    with open(filepath, 'rb') as ifs:\n",
     "        for line in ifs:\n",
-    "#             if lines_so_far % 1000 == 0:\n",
-    "#                 print(\"======> passed line \" + str(lines_so_far))\n",
     "            lines_so_far += 1\n",
     "            line = line.strip()\n",
     "            if not line:\n",
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,45 +227,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
     "\n",
-    "def build_data_matrices(data, type_that_should_be_one):\n",
+    "def build_data_matrices(data, column, type_that_should_be_one):\n",
     "    temp = [[vocab_dict[word] if word in vocab_dict else vocab_dict['UNK'] for word in post.split()]\\\n",
     "                  for post in data['posts'] ]\n",
     "    data_posts = np.array(list(itertools.zip_longest(*temp, fillvalue=vocab_size))).T\n",
-    "#     data_labels = np.zeros((len(data['type']) , 2))\n",
-    "    data_labels = np.asarray([ 1 if type == type_that_should_be_one else 0 for type in data['type']])\n",
+    "    data_labels = np.asarray([ 1 if type == type_that_should_be_one else 0 for type in data[column]])\n",
     "    return data_posts, data_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ie_data, train_ie_labels = build_data_matrices(train_ie, 'E')\n",
-    "train_ns_data, train_ns_labels = build_data_matrices(train_ns, 'N')\n",
-    "train_ft_data, train_ft_labels = build_data_matrices(train_ft, 'F')\n",
-    "train_pj_data, train_pj_labels = build_data_matrices(train_pj, 'P')\n"
+    "train_ie_data, train_ie_labels = build_data_matrices(train_ie, 'IE', 'E')\n",
+    "train_ns_data, train_ns_labels = build_data_matrices(train_ns, 'NS', 'N')\n",
+    "train_ft_data, train_ft_labels = build_data_matrices(train_ft, 'FT', 'F')\n",
+    "train_pj_data, train_pj_labels = build_data_matrices(train_pj, 'PJ', 'P')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5205,)"
+       "(2356,)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_model(data_matrix, data_labels, hidden_size=256, lr=0.005):\n",
+    "def build_model(data_matrix, data_labels, hidden_size=128, lr=0.005):\n",
     "    n_features = glove_dimensions\n",
     "    n_classes = 2\n",
     "    max_grad_norm = 5.\n",
@@ -316,11 +308,8 @@
     "    rnn_cell = tf.contrib.rnn.BasicLSTMCell(hidden_size)\n",
     "    rnn_cell = tf.nn.rnn_cell.DropoutWrapper(rnn_cell, output_keep_prob=0.8)\n",
     "    outputs, final_state = tf.nn.dynamic_rnn(rnn_cell, x, dtype=tf.float64)\n",
-    "    # print \"batch size \", final_state[1].shape[1]\n",
     "\n",
     "    h = final_state[1]\n",
-    "    # h = tf.get_variable(\"final_state\", dtype=tf.float64, initializer=h, trainable=False)\n",
-    "    # h = tf.assign_add(h, final_state[1])\n",
     "    pred = tf.matmul(h, U) + b\n",
     "\n",
     "    labels_one_hot = tf.one_hot(labels_placeholder, n_classes)\n",
@@ -328,17 +317,17 @@
     "    loss_op = tf.reduce_mean(loss_op, 0)\n",
     "\n",
     "    params = tf.trainable_variables()\n",
-    "    gradients = tf.gradients(loss_op, params)\n",
-    "    clippied_gradients, _ = tf.clip_by_global_norm(gradients, max_grad_norm)\n",
-    "    optimizer = tf.train.AdamOptimizer(learning_rate=lr)\n",
-    "    train_op = optimizer.apply_gradients(zip(clippied_gradients, params))\n",
-    "    # train_op = tf.train.AdamOptimizer(learning_rate = lr).minimize(loss_op)\n",
+    "#     gradients = tf.gradients(loss_op, params)\n",
+    "#     clippied_gradients, _ = tf.clip_by_global_norm(gradients, max_grad_norm)\n",
+    "#     optimizer = tf.train.GradientDescentOptimizer(learning_rate=lr)\n",
+    "#     train_op = optimizer.apply_gradients(zip(clippied_gradients, params))\n",
+    "    train_op = tf.train.AdamOptimizer(learning_rate = lr).minimize(loss_op)\n",
     "    return pred, input_placeholder, labels_placeholder, train_op, loss_op"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(data_matrix, data_labels, save_path, hidden_size=256, lr=0.005, saved_model_path=None, RESUME=False, batch_size=256, n_epochs=30):\n",
+    "def train(data_matrix, data_labels, save_path, hidden_size=128, lr=0.005, saved_model_path=None, RESUME=False, batch_size=256, n_epochs=30):\n",
     "    tf.reset_default_graph()\n",
     "    _, input_placeholder, labels_placeholder, train_op, loss_op = build_model(data_matrix, data_labels, hidden_size=hidden_size, lr=lr)\t\n",
     "    saver = tf.train.Saver()\n",
     "    avg_loss_list = []\n",
-    "    with tf.Session() as sess:\n",
+    "    with tf.Session(config=tf.ConfigProto(log_device_placement=True)) as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        if RESUME:\n",
     "            sess.run(tf.global_variables_initializer())\n",
@@ -414,18 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(data_matrix, data_labels, saved_model_path, classes, batch_size=256):\n",
+    "def test(data_matrix, data_labels, saved_model_path, classes, hidden_size=128, batch_size=256):\n",
     "    tf.reset_default_graph()\n",
-    "    pred, input_placeholder, labels_placeholder, _, loss_op = build_model(data_matrix, data_labels)\n",
+    "    pred, input_placeholder, labels_placeholder, _, loss_op = build_model(data_matrix, data_labels, hidden_size=hidden_size)\n",
     "    saver = tf.train.Saver()\n",
     "    loss_list = []\n",
-    "    label_list= []\n",
     "    pred_list = []\n",
-    "    with tf.Session() as sess:\n",
+    "    with tf.Session(config=tf.ConfigProto(log_device_placement=True)) as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        saver.restore(sess, saved_model_path)\n",
     "        print(\"Model restored.\")\n",
@@ -435,67 +423,12 @@
     "            pred_temp, loss, labels_temp = sess.run([pred, loss_op, labels_placeholder], feed_dict={input_placeholder: tup[0], labels_placeholder: tup[1]})\n",
     "            for i, row in enumerate(pred_temp):\n",
     "                pred_list.append(np.where(row == max(row))[0][0])\n",
-    "\n",
     "            loss_list.append(loss)\n",
+    "        print (\"Loss: \" + str(np.mean(loss_list)) + \"\\n\")        \n",
     "\n",
-    "        print (\"Loss: \" + str(np.mean(loss_list)) + \"\\n\")\n",
-    "\n",
-    "    get_accuracy(pred_list, data_labels, classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: \n",
-      "=====>loss: 0.06270280733510868 \n",
-      "Epoch 2: \n",
-      "=====>loss: 4.3880243354232285e-15 \n",
-      "New min loss at epoch 2! Model saved in path ./models--smallest loss\n",
-      "Final model saved in path: ./models\n"
-     ]
-    }
-   ],
-   "source": [
-    "train(train_ie_data, train_ie_labels, \"./models\", n_epochs=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_ie_data, dev_ie_labels = build_data_matrices(dev_ie, 'E')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from ./models\n",
-      "Model restored.\n",
-      "Loss: 2.2204460492503127e-15\n",
-      "\n",
-      "Accuracy: 100.0%\n",
-      "Micro F1 score: 100.0%\n",
-      "Macro F1 score: 100.0%\n",
-      "F1 score for E:  100.0%\n"
-     ]
-    }
-   ],
-   "source": [
-    "test(dev_ie_data, dev_ie_labels, \"./models\", ['E', 'I'])"
+    "    get_accuracy(pred_list, data_labels, classes)\n",
+    "    print(\"predictions: \", pred_list)\n",
+    "    print(\"labels: \", data_labels)"
    ]
   },
   {
@@ -503,7 +436,132 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train(train_ie_data, train_ie_labels, \"ie\", n_epochs=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(train_ns_data, train_ns_labels, \"ns\", n_epochs=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(train_ft_data, train_ft_labels, \"ft\", n_epochs=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(train_pj_data, train_pj_labels, \"pj\", n_epochs=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev_ie_data, dev_ie_labels = build_data_matrices(dev_ie, 'IE', 'E')\n",
+    "dev_ns_data, dev_ns_labels = build_data_matrices(dev_ns, 'NS', 'N')\n",
+    "dev_ft_data, dev_ft_labels = build_data_matrices(dev_ft, 'FT', 'F')\n",
+    "dev_pj_data, dev_pj_labels = build_data_matrices(dev_pj, 'PJ', 'P')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(dev_ie_data, dev_ie_labels, \"ie--smallest loss\", ['E', 'I'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(dev_ns_data, dev_ns_labels, \"ns--smallest loss\", ['N', 'S'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(dev_ft_data, dev_ft_labels, \"ft--smallest loss\", ['F', 'T'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(dev_pj_data, dev_pj_labels, \"pj--smallest loss\", ['P', 'J'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ie_data, test_ie_labels = build_data_matrices(test_ie, 'IE', 'E')\n",
+    "test_ns_data, test_ns_labels = build_data_matrices(test_ns, 'NS', 'N')\n",
+    "test_ft_data, test_ft_labels = build_data_matrices(test_ft, 'FT', 'F')\n",
+    "test_pj_data, test_pj_labels = build_data_matrices(test_pj, 'PJ', 'P')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(test_ie_data, test_ie_labels, \"ie--smallest loss\", ['E', 'I'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(test_ns_data, test_ns_labels, \"ns--smallest loss\", ['N', 'S'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(test_ft_data, test_ft_labels, \"ft--smallest loss\", ['F', 'T'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(test_pj_data, test_pj_labels, \"pj--smallest loss\", ['P', 'J'])"
+   ]
   }
  ],
  "metadata": {
